models controller working.
